--- a/app/assets/stylesheets/businesses.scss
+++ b/app/assets/stylesheets/businesses.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the businesses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+img {
+    width: 10rem;
+    
+}
+
+div{
+    display: -webkit-inline-flex;
+}
