--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,18 +1,18 @@
 <h1>Top 3 Nightclubs:</h1>
 
-<div class="cards">
-<% @nightclubs.each do |club| %>
+<nav class="cards">
+<% @nightclubs.where(area: session[:area]).each do |club| %>
 <div class= "card">
 <img src= <%= club.img_url %>>
 <br/>
 <%= link_to club.name, club %>
 </div>
 <% end%>
-</div>
+</nav>
 
 <h1>Top 3 Bars:</h1>
 <div class="cards">
-<%= @bars.where(area: session[:area]).each do |bar| %>
+<% @bars.where(area: session[:area]).each do |bar| %>
 <div class= "card">
 <img src= <%= bar.img_url %>>
 <br/>
@@ -23,7 +23,7 @@
 
 <h1>Top 3 Restaurants:</h1>
 <div class="cards">
-<%= @rests.where(area: session[:area]).each do |rest| %>
+<% @rests.where(area: session[:area]).each do |rest| %>
 <div class= "card">
 <img src= <%= rest.img_url %>>
 <br/>
