--- a/app/views/businesses/area.erb
+++ b/app/views/businesses/area.erb
@@ -1,4 +1,4 @@
-<h1> Please choose area</h1>
+<h1> Where you wanna hang, hip cat?</h1>
 
 <%= form_for :area, url: '/area' do |f| %>
   <%= f.select :area, @areas %>      
