--- a/app/views/party_times/edit.erb
+++ b/app/views/party_times/edit.erb
@@ -3,7 +3,9 @@
  <%= f.label 'Create your party'  %>
  <%= f.date_field :date ,min: Date.today %>
  <%= f.text_field :occasion %>
+ <%= f.time_field :time %>
  <%= f.hidden_field :business_id , :value => @party_time.business.id %>
+ <%= f.hidden_field :creator_id , :value => @current_user.id %>
  <%= f.submit %>
  <% end %>
 
