--- a/app/assets/stylesheets/businesses.scss
+++ b/app/assets/stylesheets/businesses.scss
@@ -6,10 +6,14 @@ body {
     background-color: violet;
 }
 
+img#show {
+    width: 40rem;
+    height: 40rem;
+}
 
 img {
-    width: 10rem;
-    height: 10rem;
+    width: 15rem;
+    height: 15rem;
     border: .3rem solid black
 }
 
@@ -20,15 +24,39 @@ a {
     padding: .1rem .1rem .3rem;
     text-decoration-color: crimson;
     font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 h1 {
    font-family: 'Courier New', Courier, monospace; 
 }
 
+h2 {
+    font-family: 'Courier New', Courier, monospace;
+}
+
+h3 {
+    font-family: 'Courier New', Courier, monospace;
+}
+
 span.item {
     font-family: 'Courier New', Courier, monospace; 
     margin-left: 50rem;
 }
+
+.cards {
+    display: flex;
+}
+
+.card {
+    padding: 2rem;
+}
+
+* {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+}
+
 
 
