--- a/app/views/businesses/show.erb
+++ b/app/views/businesses/show.erb
@@ -30,7 +30,7 @@
         <div class="review">
             
             <br/>
-            <strong><%= review.user.email %>: </strong> 
+            <strong><%= review.user.username %>: </strong> 
              <%= review.content  %>
              (Rating: <% review.rating.to_i.times do |item| %>
                     🍸
